--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,7 @@ android.useAndroidX=true
 
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+
+# Bump up the size of the JVM heap so it doesn't run out of memory
+# when building on larger multi-core machines (Mac M1 Pro & Ryzen 5900X run out of heap)
+org.gradle.jvmargs=-Xmx5120m 
