--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -3,12 +3,16 @@ repositories {
     google() // Needed for androidx
     jcenter()  // Needed for tensorflow-lite
     maven { url = 'https://maven.brott.dev/' }
+    maven { url 'https://jitpack.io' }
     flatDir {
         dirs rootProject.file('libs')
     }
 }
 
 dependencies {
+
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:dev-SNAPSHOT'
+
     implementation 'org.firstinspires.ftc:Inspection:7.1.0'
     implementation 'org.firstinspires.ftc:Blocks:7.1.0'
     implementation 'org.firstinspires.ftc:Tfod:7.1.0'
