--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+    // implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:dev-SNAPSHOT'
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.1'
+
     implementation 'org.firstinspires.ftc:Inspection:8.0.0'
     implementation 'org.firstinspires.ftc:Blocks:8.0.0'
     implementation 'org.firstinspires.ftc:Tfod:8.0.0'
